# dtw-mcp-a2a

./: .gitignore  README.md
icoraintent-mcp-fastmcp_function-source/: main.py  requirements.txt
icoraintent-wiremock-fastapi_function-source/: main.py  requirements.txt
services_icoraintent-a2a-agent/: .env  Dockerfile  agent_executor.py  deploy-cloudrun.sh  main.py  pyproject.toml
